# massaz72

./: .env.template  .gitignore  .stylelintrc.json  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  package-lock.json  package.json  pyproject.toml
massaz72/: manage.py
massaz72/cabinet/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
massaz72/cabinet/migrations/: 0001_initial.py  0002_discount.py  0003_appointment_transport_cost.py  0004_workschedule_break_between_minutes.py  0005_specialist.py  0006_add_specialist_fks.py  0007_populate_specialists.py  0008_make_specialist_required.py  0009_discount_global_prices_permission.py  0010_travel_massage_break.py  0011_appointment_parent_discount.py  0012_appointment_discount_percent.py  0013_appointment_discount_amount.py
massaz72/main/: admin.py  context_processors.py  models.py  sitemaps.py  urls.py  views.py
massaz72/main/migrations/: 0001_initial.py  0002_remove_about_experience_about_start_date_and_more.py  0003_certificate_is_archived.py  0004_sitesettings.py  0005_alter_sitesettings_options_sitesettings_background_and_more.py  0006_alter_about_photo_alter_certificate_image_and_more.py  0007_alter_sitesettings_background.py  0008_sitesettings_meta_description_and_more.py  0009_sitesettings_contacts.py  (+6 more)
massaz72/massaz72/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
massaz72/services/: admin.py  models.py  sitemaps.py  urls.py  views.py
massaz72/static/: robots.txt
massaz72/tgbot/: admin.py  apps.py  bot.py  models.py  urls.py  views.py
(+92 files in other folders)
