[project]
name = "massaz72-django"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Ponomarev",email = "9129910001@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
