[project]
name = "massaz72"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Ponomarev",email = "9129910001@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "django-stubs (>=5.1.3,<6.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "libsass (>=0.23.0,<0.24.0)",
    "django-compressor (>=4.5.1,<5.0.0)",
    "django-sass-processor (>=1.4.1,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
